# camera_lidar_calibrate

./: CMakeLists.txt
conf/: config_file.txt  lidar_camera_calibration.yaml  marker_coordinates.txt  points.txt  transform.txt
dependencies/aruco_mapping/: CMakeLists.txt  package.xml
dependencies/aruco_mapping/data/: 1198camera.ini  1547camera.ini  zed_left_uurmi.ini
dependencies/aruco_mapping/launch/: aruco_config.rviz  aruco_mapping.launch
dependencies/aruco_mapping/src/: aruco_mapping.cpp  create_marker.cpp  image_process.cpp
dependencies/aruco_ros/aruco_ros/: package.xml
include/lidar_camera_calibration/: Corners.h  Find_RT.h  PreprocessUtils.h  Utils.h
launch/: find_transform.launch  image.launch  tf.launch
log/: avg_values.txt
src/: Config.cc  Config.h  Corners.cpp  compute_rt.cc  compute_rt.h  find_velodyne_points.cpp  fusion_lidar_camera.cc  fusion_lidar_camera.h  image_laser_process.cpp  lidar_costfunction.h  main.cc
